--- a/FirebaseDevicetoDevice/app/src/main/res/values/strings.xml
+++ b/FirebaseDevicetoDevice/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="end_game_fragment">End Game</string>
+    <string name="gaming_fragment">Game</string>
 </resources>
